test/sematest/invalid/invalid_lvalue5.java
class Foo {
  public int f() { return 3; }

  public static void main(String[] args) {
    Foo f;

    f.f() = 10;
  }
}
